basic gameinfotable working, fixed z-index on regpage

--- a/game.css
+++ b/game.css
@@ -1,3 +1,74 @@
 .gamepage {
   background-color: rgb(0, 126, 0);
+  display: grid;
+  grid-template-rows: 3fr 2fr 1fr;
+  gap: 2rem;
+  justify-content: center;
+  padding: 1rem 0;
+}
+
+.gameinfobox {
+  border: 1px solid white;
+  width: 90vw;
+  background-color: rgba(255, 0, 0, 0.644);
+  display: grid;
+  grid-template: repeat(10, 1fr) / repeat(6, 1fr);
+  align-items: center;
+}
+
+.infobox {
+  text-align: center;
+  font-size: 2rem;
+  border: 1px solid white;
+  height: 100%;
+}
+
+.cardtable {
+  height: 35vh;
+  width: 85vw;
+  border: 0.5rem solid rgba(255, 255, 255, 0.8);
+  border-radius: 40%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  margin: 0 auto;
+  box-shadow: 0 0 1rem;
+}
+
+.gamemessage {
+  text-align: center;
+  font-size: 3rem;
+  font-weight: bold;
+  margin-bottom: 4rem;
+}
+
+.tabletext {
+  position: absolute;
+  font-size: 3rem;
+  font-style: italic;
+  color: rgba(255, 255, 255, 0.4);
+}
+
+.cardcontainer {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 10rem;
+  margin: 0 auto;
+  padding-bottom: 7rem;
+}
+
+.cardback {
+  position: relative;
+  height: 15rem;
+  aspect-ratio: 4/5.5;
+  border-radius: 5%;
+  box-shadow: 0 0.5rem 1rem rgb(0, 44, 0);
+  transform: rotateY(0deg);
+}
+
+.actionbox {
+  border: 1px solid white;
+  width: 90vw;
 }
